// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Element import throws if using default import on lwc 1`] = `
Object {
  "column": 7,
  "length": 6,
  "line": 1,
  "start": 7,
}
`;

exports[`Element import throws if using namespace import on lwc 1`] = `
Object {
  "column": 7,
  "length": 11,
  "line": 1,
  "start": 7,
}
`;

exports[`Element import throws non-whitelisted lwc api is imported 1`] = `
Object {
  "column": 0,
  "length": -1,
  "line": 1,
  "start": 0,
}
`;
